コンストラクタがprivateになったことによる対応